# car_detection_system

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
car_detection_system/: camera_test.py  detection_node.py
launch/: car_detection.launch.py
scripts/: detection_node.py  test_camera.py  test_gpio.py  view_stream.py
